--- a/BookingSystem/Views/Bookings/Index.cshtml
+++ b/BookingSystem/Views/Bookings/Index.cshtml
@@ -2,6 +2,20 @@
 
 @{
     ViewData["Title"] = "Index";
+
+    Dictionary<int, string> comparisonResultsStart = new Dictionary<int, string>()
+            {
+                [-1] = "On Time",
+                [0] = "On Time",
+                [1] = "Late"
+            };
+    Dictionary<int, string> comparisonResultsEnd = new Dictionary<int, string>()
+            {
+                [-1] = "Early",
+                [0] = "On Time",
+                [1] = "On Time"
+            };
+ 
 }
 
 <h1>Index</h1>
@@ -21,6 +35,8 @@
     </p>
 </form>
 
+
+
 <table class="table">
     <thead>
         <tr>
@@ -31,13 +47,23 @@
                 @Html.DisplayNameFor(model => model.Bookings![0].User!.FullName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Bookings![0].Event!.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Bookings![0].Event!.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bookings![0].Event!.Description)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bookings![0].StartTime)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bookings![0].EndTime)
+            </th>
+            
+            <th>
+                Availability<br /> (Start - End)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bookings![0].IsBooked)
@@ -54,15 +80,25 @@
             <td>
                 @Html.DisplayFor(modelItem => item.User!.FullName)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Event!.Id)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Event!.Title)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Event!.Description)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartTime)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EndTime)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => comparisonResultsStart[item.StartTime.CompareTo(item.Event.StartTime)]) - @Html.DisplayFor(modelItem => comparisonResultsEnd[item.EndTime.CompareTo(item.Event.EndTime)])
+                </td>
+                
             <td>
                 @Html.DisplayFor(modelItem => item.IsBooked)
             </td>
